# MapSportFrance

./: .gitignore  .replit  README.md  app.py  data_processor.py  main.py  pyproject.toml  replit.nix  requirements.txt  server.py
doc/: doc.txt
sources/: app.py  data_processor.py  resources-utilisées.txt
sources/data/: README.md
sources/static/: graph_configurator.js  style.css
sources/templates/: homepage.html
static/: graph_configurator.js  style.css
templates/: homepage.html
